# eos-companion-app-integration

./: .gitignore  .gitmodules  .pylintrc  Makefile.am  Makefile.am.integration.inc  Makefile.am.service.inc  README  autogen.sh  build-flatpak.sh  com.endlessm.CompanionAppOfflineInstaller.data.gresource.xml  com.endlessm.CompanionAppService.PipDependencies.json  com.endlessm.CompanionAppService.gresource.xml  com.endlessm.CompanionAppService.json.in  configure.ac  requirements.txt  run-python-test.sh  run_sdk3.sh  setup.py  setup_setuptools.py
configuration-manager/: main.c
data/: com.endlessm.CompanionAppAvahiHelper.xml  com.endlessm.CompanionAppService.rules  com.endlessm.CompanionAppService.service.in  com.endlessm.CompanionAppService.xml  com.endlessm.CompanionAppServiceAvahiHelper.conf  com.endlessm.CompanionAppServiceAvahiHelper.rules  com.endlessm.CompanionAppServiceAvahiHelper.service.in  com.endlessm.test_with_martin.en.desktop  config.ini  eos-companion-app-avahi-helper.service.in  eos-companion-app-configuration-manager.service.in  eos-companion-app-disabler.service.in  eos-companion-app-enabler.service.in  eos-companion-app-helper-sysuser.conf  eos-companion-app-helper.conf  eos-companion-app.service  eos-companion-app.socket
data/installer/ui/: main.ui
data/templates/: mobile-article-wrapper.mst
debian/: changelog  control  copyright  eos-companion-app-os-integration.install  eos-companion-app-os-integration.postinst  rules
docs/: API.md  Architecture.md  AuthenticationFlow.md  Debugging.md  OSIntegration.md
eoscompanion/: __init__.py  applications_query.py  constants.py  content_adjusters.py  content_streaming.py  core_routes.py  dummy_feed.py  ekn_content_adjuster.py  ekn_data.py  ekn_query.py  eknservices_bridge.py  format.py  functional.py  license_content_adjuster.py  main.py  middlewares.py  responses.py  routes.py  server.py  service.py  util.py  v1_routes.py  v2_routes.py
eoscompanioninstaller/: main.py
helper/: eos-companion-app-avahi-helper  eos-companion-app-disabler  eos-companion-app-enabler
m4/: eos-pylint.m4
socket-activation-wrapper/: main.c
src/: config.h.in  eos-companion-app-installer-helper.c  eos-companion-app-installer-helper.h  eos-companion-app-integration-app-info.c  eos-companion-app-integration-app-info.h  eos-companion-app-integration-helper.c  eos-companion-app-integration-helper.h  eos-companion-app-service-app-info.c  eos-companion-app-service-app-info.h  eos-companion-app-service-managed-cache-private.h  eos-companion-app-service-managed-cache.c  eos-companion-app-service-managed-cache.h
test/: build_app.py  routes_v1.py  routes_v2.py  service_test_helpers.py  test_service.py
test_data/org.test.ContentApp/app/: org.test.ContentApp.desktop
test_data/org.test.ContentApp/content/: article1.html  article2.html  content.shard  db.json
test_data/org.test.NoDisplayApp/app/: app.gresource  org.test.NoDisplayApp.desktop  overrides.scss
test_data/org.test.VideoApp/app/: app.gresource  org.test.VideoApp.desktop  overrides.scss
test_data/org.test.VideoApp/content/: content.shard  db.json
test_data/scripts/: README.md  generate_content_shard.sh  generate_gresource_file.sh
tools/: regenerate_pip_flatpak_manifest.py
